# sd-control-and-representation

./: .env.example  .gitattributes  .gitignore  DATASETS.md  PROJECT_STRUCTURE.md  README.md  pyproject.toml  pytest.ini  sd_1_5_caching_reprezentation_example.ipynb  sd_1_5_sae_playground.ipynb  sd_1_5_sae_usage_examples.ipynb  sd_1_5_usage_example.ipynb
.github/workflows/: tests.yml
dashboard/: README.md  __init__.py  app.py  style.css
dashboard/config/: __init__.py  sae_config.yaml  sae_config_loader.py
dashboard/core/: __init__.py  model_loader.py  state.py
dashboard/utils/: __init__.py  clip_score.py  cuda.py  detection.py  heatmap.py
data/: README.md
data/IP2_benchmark/: extract_prompts_I2P.txt
data/UnlearnCanvas_resources/: class.txt  styles.txt
data/cc3m-wds/: prompts_fs.txt  prompts_sae.txt
data/nudity/: classes.txt  prompts.txt  prompts_analysis.txt  (+2 more)
logs/: unlearn_gen_1509731_1.err  unlearn_gen_1509731_1.out  unlearn_gen_1509731_2.err  unlearn_gen_1509731_2.out  unlearn_gen_1509731_3.err  unlearn_gen_1509731_3.out  unlearn_gen_1509731_4.err  unlearn_gen_1509731_4.out  unlearn_gen_1509731_5.err  unlearn_gen_1509731_5.out  unlearn_gen_1509731_6.err  unlearn_gen_1509731_6.out  unlearn_gen_1509915_0.err  unlearn_gen_1509915_0.out  unlearn_gen_1509915_1.err  unlearn_gen_1509915_1.out  unlearn_gen_1509915_2.err  unlearn_gen_1509915_2.out
notebooks/: README.md  feature_selection_scores_analysis.ipynb  sd_1_5_caching_reprezentation_example.ipynb  sd_1_5_sae_playground.ipynb  sd_1_5_sae_usage_examples.ipynb  sd_1_5_usage_example.ipynb
scripts/: README.md  download_sae_models.py  eden_test.sh  generate_cache.sh  run_generation.sh  test_image_generation.sh
src/: README.md  __init__.py  generate_cache.py  sd_1_5_generate_cache.py  sd_1_5_generate_cachev2.py
tests/: README.md  TEST_RESULTS.md  __init__.py  conftest.py  run_tests.py  test.sh  test_cache.py  test_config.py  test_dashboard.py  test_dataset.py  test_hooks.py  test_model_loader.py  test_prompts.py  test_sae_metrics.py  test_sae_training.py  test_sae_utils.py  test_sd_v1_5.py  test_visualization.py
utils/: reprezentation.py  sae_utils.py  visualization.py
(+154 files in other folders)
