[project]
name = "sd-control-and-representation"
version = "0.1.0"
description = "Stable Diffusion: Semantic Representation Analysis and Control."
requires-python = ">=3.10"

dependencies = [
    "accelerate>=1.11.0",
    "datasets>=4.4.1",
    "diffusers>=0.35.2",
    "dotenv>=0.9.9",
    "einops>=0.8.1",
    "fiftyone>=1.11.1",
    "gdown>=5.2.0",
    "gputil>=1.4.0",
    "ipykernel>=7.0.1",
    "jupyterlab>=4.4.10",
    "matplotlib>=3.10.7",
    "nudenet>=3.4.2",
    "overcomplete>=0.2.8",
    "psutil>=7.1.2",
    "pycocotools>=2.0.11",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "torch>=2.7.0",
    "torchvision>=0.22.1",
    "transformers>=4.57.1",
    "wandb>=0.22.3",
]

[tool.uv]
[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.ruff]
select = ["E", "W", "F", "I", "N", "B", "S", "TID", "C4"]
ignore = []
line-length = 100
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# Some Jupyter notebook issues we want to ignore
"*.ipynb" = ["E402", "F841"] # E402: imports, F841: unused variables

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]
